@@ -45,8 +45,4 @@ class tx_oelib_tests_fixtures_TableLessTestingMapper extends tx_oelib_DataMapper
 	 */
 	protected $modelClassName = 'tx_oelib_tests_fixtures_TestingModel';
 }
-
-if (defined('TYPO3_MODE') && $TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/oelib/tests/fixtures/class.tx_oelib_tests_fixtures_TableLessTestingMapper.php']) {
-	include_once($TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/oelib/tests/fixtures/class.tx_oelib_tests_fixtures_TableLessTestingMapper.php']);
-}
 ?>
