@@ -34,8 +34,4 @@
  */
 class tx_oelib_tests_fixtures_pi1_NotIncluded1 {
 }
-
-if (defined('TYPO3_MODE') && $TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/oelib/tests/fixtures/pi1/class.tx_oelib_tests_fixtures_pi1_NotIncluded1.php']) {
-	include_once($TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/oelib/tests/fixtures/pi1/class.tx_oelib_tests_fixtures_pi1_NotIncluded1.php']);
-}
 ?>
